--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  device_calendar: ^4.0.1-dev.13167
+  date_picker_timeline: ^1.2.3
+  flutter_calendar_carousel: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
