--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   date_picker_timeline: ^1.2.3
   flutter_calendar_carousel: ^2.0.1
   intl: ^0.17.0
+  flutter_slidable: ^0.6.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
